--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -15,9 +15,85 @@
 </head>
 
   <body>
+<header>
+      <div class="container"> 
+          <nav>
+            <a href="services.html">Services</a>
+            <a href="#">Products</a>
+            <a href="#">Vision</a>
+            <a href="#">Features</a>
+            <a href="about.html">About</a>
+            <a href="#">Contact</a>
+          </nav>
+          <a href="index.html">
+            <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+            </a>
+      </div>
+      <section class="homeSec">
+        <div class="headerOne">
+          <div class="homeBody">
+                      <h1>Innovation
+                      On
+                      Demand</h1>
+                      <p>Get Started</p>
+          </div>
+          <div class="topLogo">
+              <img src="img/header-img.png" alt="Image of a code snippet.">
+              </div>
+        </div>
+      </section>
+</header>
+<section class="homeTop">
+      <div class="features">
+        <div class="featuresBody">
+        <h4>Features</h4>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </div>
+<div class="about">
+  <div class="aboutBody">  
+        <h4>About</h4>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+       </div>
+       </div>
+</section>
+<div class="topMiddle-img">
+  <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+  </div>
 
-    <!-- Copy and paste your HTML from the first UI project here -->
-      
-    
+<section class="last">
+  <div class="service">
+    <div class="serviceText">
+        <h4>Services</h4>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+  </div>
+  <div class="product">
+      <div class="productText">
+        <h4>Product</h4>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </div>
+    <div class="vision">
+        <div class="visionText">
+        <h4>Vision</h4>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+        </div>
+      </div>
+</section>
+<div class="contact">
+    <h5>Contact</h5>
+    <p>123 Way 456 Street</p>
+    Somewhere, USA 
+    <br>
+    <br>1 (888) 888-8888<br>
+    <br>
+    sales@greatidea.io
+  </div>
+
+  <div class="footer">
+      <footer>Copyright Great Idea! 2018</footer>
+      </div>
+  
   </body>
 </html>
