--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -16,26 +16,26 @@
 
 <body>
 <header>
-    <div class="container"> 
-          <nav>
-            <a href="#">Services</a>
-            <a href="#">Products</a>
-            <a href="#">Vision</a>
-            <a href="#">Features</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
-          </nav>
+        <div class="container"> 
+              <nav>
+                <a href="services.html">Services</a>
+                <a href="#">Products</a>
+                <a href="#">Vision</a>
+                <a href="#">Features</a>
+                <a href="about.html">About</a>
+                <a href="#">Contact</a>
+              </nav>
 
-
-          <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-
-      </div>
+              <a href="index.html"> 
+              <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+            </a>
+        </div>
         <div class="topImg">
           <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
         </div>
     <section class="containerOne">
       <div class="text">
-        <div class="service">
+        <div>
           <h3>Services</h3>
 
           <p> services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
